--- a/src/app/grid/grid.component.scss
+++ b/src/app/grid/grid.component.scss
@@ -2,7 +2,6 @@
 
 .grid-row {
   display: flex;
-  margin-bottom: 1px;
 }
 
 .grid-row:last-child {
@@ -12,9 +11,9 @@
 .grid-cell {
   width: 10px;
   height: 10px;
-  margin-right: 1px;
   background-color: $light_color;
   border: 1px solid $dark_color;
+  opacity: 75%;
 }
 
 .grid-cell:last-child {
@@ -23,4 +22,5 @@
 
 .alive {
   background-color: $dark_color;
+  border: 1x solid $light_color;
 }
