--- a/src/app/grid/grid.component.scss
+++ b/src/app/grid/grid.component.scss
@@ -1,7 +1,12 @@
-@import '../../colors.scss';
+@import "../../colors.scss";
+
+.grid {
+  border-spacing: 0;
+}
 
 .grid-row {
-  display: flex;
+  //border-spacing: 0;
+  border: 0;
 }
 
 .grid-row:last-child {
@@ -12,7 +17,7 @@
   width: 10px;
   height: 10px;
   background-color: $light_color;
-  border: 1px solid $dark_color;
+  border: 1px solid $border_color;
 }
 
 .grid-cell:last-child {
@@ -22,4 +27,8 @@
 .alive {
   background-color: $dark_color;
   border: 1px solid $light_color;
+  border-radius: 10px;
 }
+
+
+
