--- a/src/app/components/controls/controls.component.scss
+++ b/src/app/components/controls/controls.component.scss
@@ -2,11 +2,12 @@
 .controls {
   margin-top: 5px;
 }
+/*
 :host {
   display: flex;
   justify-content: space-between;
   width: 40%;
-}
+}*/
 
 .buttonGroup {
   display: flex;
